--- a/store.html
+++ b/store.html
@@ -38,7 +38,7 @@
                         <br />
                         <input class="styled" type="submit" value="submit">
                         <br><br>
-                        <a href="FISCH WEBSITE.html">home</a>
+                        <a href="index.html">home</a>
                 </center>
             </td>
             <br>
